Asset management #3 (#4)
* Brand CRUD

* AuditedModel created, updated by&datetime

* AuditedModel created, updated by&datetime updated

* COmmented VIew and Audit Model

* UpdATED FIND METHOD

* Redis saved isn't retreiving

* getAll removed redis

* getAll removed redis business

* Removed unused import

* Removed unused import

* Updated Category, subCategory

* Updated Category, subCategory for IDENTITY To generate PK

* Added Item, still sub N item isn't working

* Fixed redis conf for subC N Item

* updated code in Item

* updated status to int

* updated stock

* Updated time take for get api call

* Updated Role

* Updated TTTE timestamp N Permissions

* business in ROle

* user controller authenticatedBusiness sq fix